feat: add input range validation and display error message when user tries out of range numbers

--- a/index.css
+++ b/index.css
@@ -13,3 +13,14 @@ main {
 #reset {
   margin: 20px;
 }
+
+
+.error-style {
+  color: red;
+  align-content: center;
+}
+
+
+#error-message {
+  text-align: center;
+}
